--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <button onclick="hello()">hello</button>
+    <button onclick="hello()">helo</button>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut, qui!</p>
     <script src="./js/index.js"></script>
 </body>
 </html>
